cf_analysis_results/checkerframework_3.42.0_results/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8.txt
../dataset/june2020_dataset/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/AsetustenTulostaja.java:79: error: (required.method.not.called) $$ 4 $$ method close $$ new FileWriter(file.getAbsoluteFile()) $$ java.io.FileWriter $$ possible exceptional exit due to bw.write(sisalto) with exception type java.io.IOException $$ ( 2018, 2056 ) $$ @MustCall method close may not have been invoked on new FileWriter(file.getAbsoluteFile()) or any of its aliases.
            fw = new FileWriter(file.getAbsoluteFile());
                 ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to bw.write(sisalto) with exception type java.io.IOException
../dataset/june2020_dataset/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:92: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(csvFile) $$ java.io.FileReader $$ possible exceptional exit due to poytienMaara(br, cvsSplitBy) with exception type java.lang.NumberFormatException $$ ( 2451, 2474 ) $$ @MustCall method close may not have been invoked on new FileReader(csvFile) or any of its aliases.
            br = new BufferedReader(new FileReader(csvFile));
                                    ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to poytienMaara(br, cvsSplitBy) with exception type java.lang.NumberFormatException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
